<resources>
    <string name="app_name">DeHet</string>
    <string name="title_activity_highscore">HighscoreActivity</string>
    <string name="hint1">These are not rules that apply 100% of the time but can offer you some direction on when to use \"de\" or \"het\".</string>
    <string name="usuallyde">Usually \"de\"</string>
    <string name="dehint1">- Fruits, trees, plants, mountains, rivers.</string>
    <string name="dehint2">- Plurals, such as \"(de) paarden\", \"(de) kroketten\"</string>
    <string name="dehint3">- Words that end in -heid, -nis, -ij</string>
    <string name="dehint4">- Words that end in -theek, -teit, -iteit</string>
    <string name="usuallyhet">Usually \"het\"</string>
    <string name="hethint1">- Verbs in infinitive form, such as \"(het) roken\", \"(het) delen\"</string>
    <string name="hethint2">- Diminutives such as \"(het) kastje\", \"(het) koopje\"</string>
    <string name="combinedwords">Combined words</string>
    <string name="cwhint1">When dealing with combined words, the article is determined by the last word in the combination.</string>
    <string name="gamemode">Chill Mode</string>
    <string name="gameversion">Game Version</string>
    <string name="dehetversion">De/Het (articles)</string>
    <string name="dezedieditdatversion">Deze/Die Dit/Dat (demonstrative pronouns)</string>
    <string name="reset"><![CDATA[Achievements & Coins]]></string>
    <string name="resetcheckbox">Reset coins and all achievements.</string>
    <string name="turnTTSoff">TextToSpeech</string>
    <string name="chillmodeexplained">Chill mode lets you play indefinitely without a score, lives or timer. Games played in chill mode are not eligible for achievements or coins.</string>
    <string name="versionsexplained">Choose between games using articles or demonstrative pronouns.</string>
    <string name="ttsexplained">Allow TextToSpeech to read the word aloud when tapped. Note: TTS API is currently not supporting Dutch.</string>
    <string name="turnTranslationOff">Translations</string>
    <string name="translationexplained">Show English translation upon tapping the word.</string>
    <string name="correctguesses">" RIGHT"</string>
    <string name="incorrectguesses">"WRONG "</string>
    <string name="itemowned">You own this! Tap to equip.</string>
    <string name="itemequipped">Equipped! Tap to unequip.</string>
    <string name="coins">"Coins: "</string>
    <string name="cannotafford">You cannot afford this!</string>
    <string name="itemboughtconfirmation">Succesfully bought!</string>
    <string name="bruinscarf">Powdery Pastel Scarf</string>
    <string name="bruinhat">Searing Summer Hat</string>
    <string name="bruinsock">Surely Some Oversized Sock</string>
    <string name="bruinearmuffs">Warm Wooly Earmuffs</string>
    <string name="bruinflower">Fantastic Fluffy Flowercrown</string>
    <string name="bruinshades">Sporty Shades of Supercoolness</string>
    <string name="bruintie">Tie With Tons of Triangles</string>
    <string name="bruinhalo">Halo of Helpfulness</string>
    <string name="bruinwings">Iridescent Wings of Indecision</string>
    <string name="bruincrown">Royal Crown of Masterminds</string>
    <string name="beginnerachievement1">Score 50 points or more</string>
    <string name="beginnerachievement2">Score a combo of at least 5</string>
    <string name="beginnerachievement3">Finish a game with at least 1 life left</string>
    <string name="beginnerachievement4">Correctly assign 25 articles</string>
    <string name="noviceachievement1">Score 100 points or more</string>
    <string name="noviceachievement2">Score a combo of at least 10</string>
    <string name="noviceachievement3">Finish a game with at least 2 lives left</string>
    <string name="noviceachievement4">Correctly assign 50 articles</string>
    <string name="intermediateachievement1">Score 250 points or more</string>
    <string name="intermediateachievement2">Score a combo of at least 25</string>
    <string name="intermediateachievement3">Finish a game with 3 lives left</string>
    <string name="intermediateachievement4">Correctly assign 75 articles</string>
    <string name="masterachievement1">Score 750 points or more</string>
    <string name="masterachievement2">Score a combo of at least 50</string>
    <string name="masterachievement3">Correctly assign 100 articles</string>
    <string name="ultimateachievement1">Score 1500 points or more</string>
    <string name="ultimateachievement2">Score a combo of at least 100</string>
    <string name="ultimateachievement3">Correctly assign 150 articles</string>
    <string name="beginnertype">Beginner</string>
    <string name="novicetype">Novice</string>
    <string name="intermediatetype">Intermediate</string>
    <string name="mastertype">Master</string>
    <string name="ultimatetype">Ultimate</string>
    <string name="achievementcomplete">Complete!</string>
    <string name="completedpart1">"Completed "</string>
    <string name="completedpart2">" times"</string>
    <string name="lives">"LIVES "</string>
    <string name="thesethosethatthis1">DEZE / DIE</string>
    <string name="thesethosethatthis2">DIT / DAT</string>
    <string name="articlebuttonde">DE</string>
    <string name="articlebuttonhet">HET</string>
    <string name="combo">COMBO x</string>
    <string name="levens">"LIVES "</string>
    <string name="standardtextright">0 RIGHT</string>
    <string name="standardtextwrong">WRONG 0</string>
    <string name="standardtextword">" "</string>
    <string name="OFF">OFF</string>
    <string name="ON">ON</string>
    <string name="equippedsuccess">Equipped item!</string>
    <string name="unequippedsuccess">Unequipped item!</string>
    <string name="basiccoinstext">Coins: 0</string>
    <string name="articledebutton">DE</string>
    <string name="articlehetbutton">HET</string>
    <string name="wrongbasictext">WRONG</string>
    <string name="livesbasictext">LIVES</string>
    <string name="rigthbasictext">RIGHT</string>
    <string name="menuhints">HINTS</string>
    <string name="menuoptions">OPTIONS</string>
    <string name="menuachievements">ACHIEVEMENTS</string>
    <string name="menushop">SHOP</string>
    <string name="menunewgame">NEW GAME</string>
    <string name="menuhelp">HELP</string>
    <string name="shopcoinsbasictext">Coins:</string>
    <string name="helpapp">How does this app work?</string>
    <string name="explain1">This app allows you to practise using the articles in Dutch, de and het. The app will present you with a word and it\'s up to you to pick the right article to go with it. To make things a little more interesting, you can earn points by picking the right article, and even more if you keep picking the right article consecutively.</string>
    <string name="explain2">The little figure on the main screen right under the buttons is called Bruin. He\'s there to keep you a bit motivated and give you a reason to keep going, even if it doesn\'t go that well.</string>
    <string name="explain3">You can earn achievements by meeting certain goals. If you complete achievements multiple times, you will be awarded with coins which can be used to purchase items in the shop which you can then give to Bruin! </string>string>
    <string name="explain4">If the timer, combo system and points are freaking you out a little: no worries. Using the options menu you can disable these things to just practise in peace. You will just not be able to earn achievements or coins in this mode. If you are in need of a little help, don\'t hesitate to press the hints button in the main menu. This will provide you with some useful tips on how to determine which article to use. You can also tap the word to have it read aloud to you and have it translated. </string>
</resources>
