<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_width="match_parent">

    <TextView
        android:textSize="20dp"
        android:textColor="#4D3E2D"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuallyde"
        android:id="@+id/textView3"
        android:textStyle="bold"/>

    <TextView
        android:textSize="15dp"
        android:textColor="#856948"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dehint1"
        android:id="@+id/textView4" />

    <TextView
        android:textSize="15dp"
        android:textColor="#856948"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dehint2"
        android:id="@+id/textView5" />

    <TextView
        android:textSize="15dp"
        android:textColor="#856948"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dehint3"
        android:id="@+id/textView6" />

    <TextView
        android:textSize="15dp"
        android:textColor="#856948"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dehint4"
        android:id="@+id/textView7" />

    <TextView
        android:textSize="20dp"
        android:textColor="#4D3E2D"
        android:paddingTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuallyhet"
        android:id="@+id/textView"
        android:textStyle="bold"/>

    <TextView
        android:textSize="15dp"
        android:textColor="#856948"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hethint1"
        android:id="@+id/textView8" />

    <TextView
        android:textSize="15dp"
        android:textColor="#856948"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hethint2"
        android:id="@+id/textView9" />

    <TextView
        android:textSize="20dp"
        android:textColor="#4D3E2D"
        android:paddingTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/combinedwords"
        android:id="@+id/textView10"
        android:textStyle="bold"/>

    <TextView
        android:textSize="15dp"
        android:textColor="#856948"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cwhint1"
        android:id="@+id/textView11" />
</LinearLayout>



