<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#4D3E2D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gamemode"
            android:id="@+id/textView12" />

        <TextView
            android:textColor="#856948"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chillmodeexplained"
            android:id="@+id/textView19" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            android:textColor="#856948"
            android:id="@+id/switch1" />

        <TextView
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#4D3E2D"
            android:paddingTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gameversion"
            android:id="@+id/textView14" />

        <TextView
            android:textColor="#856948"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/versionsexplained"
            android:id="@+id/textView20" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dehetversion"
                android:textStyle="italic"
                android:id="@+id/dehetradioButton"
                android:textColor="#856948"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dezedieditdatversion"
                android:textStyle="italic"
                android:id="@+id/dezedieditdatradioButton"
                android:textColor="#856948"/>
        </RadioGroup>

        <TextView
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#4D3E2D"
            android:paddingTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turnTTSoff"
            android:id="@+id/textView16" />

        <TextView
            android:textSize="15dp"
            android:textColor="#856948"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ttsexplained"
            android:id="@+id/textView18" />

        <Switch
            android:textSize="15dp"
            android:text=" "
            android:textColor="#856948"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch2" />

        <TextView
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#4D3E2D"
            android:paddingTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turnTranslationOff"
            android:id="@+id/textView22" />

        <TextView
            android:textSize="15dp"
            android:textColor="#856948"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/translationexplained"
            android:id="@+id/textView21" />

        <Switch
            android:textSize="15dp"
            android:text=" "
            android:textColor="#856948"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch3" />

        <TextView
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#4D3E2D"
            android:paddingTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:id="@+id/textView15" />

        <CheckBox
            android:textSize="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetcheckbox"
            android:textStyle="italic"
            android:textColor="#856948"
            android:id="@+id/checkBox" />

    </LinearLayout>

    </ScrollView>


</LinearLayout>
