<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="nl.mprog.renske.myapplication.HelpActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <TextView
        android:textSize="20dp"
        android:textColor="#4D3E2D"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpapp"
        android:id="@+id/textView3"
        android:textStyle="bold"/>

    <TextView
        android:textSize="15dp"
        android:textColor="#856948"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explain1"
        android:id="@+id/textView4"
        android:paddingBottom="10dp"/>
    <TextView
        android:textSize="15dp"
        android:textColor="#856948"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explain2"
        android:id="@+id/textView5"
        android:paddingBottom="10dp"/>
    <TextView
        android:textSize="15dp"
        android:textColor="#856948"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explain3"
        android:id="@+id/textView6"
        android:paddingBottom="10dp"/>
    <TextView
        android:textSize="15dp"
        android:textColor="#856948"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explain4"
        android:id="@+id/textView7"
        android:paddingBottom="10dp"/>

            </LinearLayout>
    </ScrollView>

</LinearLayout>
